--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
 
       - name: Build Example Project
         run: |
-          xcodebuild clean build -workspace FaceUnity.xcworkspace \
-            -scheme Example -configuration Release \
-            CODE_SIGN_IDENTITY=- -sdk iphonesimulator | xcpretty -c
+          set -o pipefail && xcodebuild clean build \
+            -workspace FaceUnity.xcworkspace -scheme Example \
+            -configuration Release CODE_SIGN_IDENTITY=- \
+            -sdk iphonesimulator | xcpretty -c
 
       - name: Lint Pod
         run: pod lib lint --allow-warnings --skip-import-validation
