Use restore-keys for cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,13 +12,19 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.cocoapods
-          key: ${{ runner.os }}-cocoapods-repos
+          key: ${{ runner.os }}-cocoapods-repos-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cocoapods-repos-
+            ${{ runner.os }}-cocoapods-
 
       - name: Cache CocoaPods Pods
         uses: actions/cache@v1
         with:
           path: ~/Library/Caches/CocoaPods
-          key: ${{ runner.os }}-cocoapods-pods
+          key: ${{ runner.os }}-cocoapods-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cocoapods-pods-
+            ${{ runner.os }}-cocoapods-
 
       - name: Install Dependencies
         run: pod install --repo-update
