--- a/.github/workflows/publish-podspec.yml
+++ b/.github/workflows/publish-podspec.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Publish podspec to Trunk repo
+      - name: Publish Podspec
         run: pod trunk push --allow-warnings --skip-import-validation
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
